Wed Apr 25 15:07:37 2001  Christopher Faylor <cgf@cygnus.com>

	* sigproc.h [sigthread]: Add exception field.  [sigframe::~sigframe]:
	Clear exception field.  [sigframe::set]: Set exception field from
	caller.
	* sigproc.cc (sig_send): Set exception field when frame pointer is
	passed in.
	* exceptions.cc (interrupt_on_return): Always treat exception as
	interruptible.

2001-04-25  Egor Duda  <deo@logos-m.ru>

	* cygwin.din: Export asctime_r, ctime_r, gmtime_r, localtime_r
	* include/cygwin/version.h: Bump CYGWIN_VERSION_API_MINOR to 39

Wed Apr 25 10:57:36 2001  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump minor version number.
	* childinfo.h: Bump child structure magic number.

2001-04-25  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* uinfo.cc (internal_getlogin): Return pointer to struct passwd.
	(uinfo_init): Accommodate the above change.
	* syscalls.cc (seteuid): Ditto.

Tue Apr 25 11:08:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* autoload.cc: Add LoadDLLfunc statements for SetTokenInformation@16.
	* cygheap.cc: Include security.h.
	* grp.cc (internal_getgrent): New function.
	(getgroups): Rearranged using `internal_getgrent' and the new
	`cygsid' class.
	* passwd.cc (internal_getpwent): New function.
	* sec_acl.cc: Use new `cygsid' class throughout.
	(acl_access): Use `internal_getgrent' instead of `getgrent'.
	* sec_helper.cc: Use new `cygsid' class throughout.
	(get_id_from_sid): Use `internal_getgrent' instead of `getgrent'.
	Use `internal_getpwent' instead of `getpwent'.
	* security.cc: Use new `cygsid' class throughout.
	* security.h: Move `MAX_SID_LEN' from winsup.h to here.
	Add extern declarations for `internal_getgrent' and `internal_getpwent'.
	(class cygsid): New class.
	* shared.cc (sec_user): Use new `cygsid' class.
	* syscalls.cc (seteuid): Try to set owner to user and primary group to
	current group in impersonation token before performing impersonation.